[project]
name = "gh-audit"
version = "0.1.3"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.11"

dependencies = [
    "click>=8.1.1",
    "pygithub>=2",
    "pyyaml>=6.0.1",
]
entry-points.console_scripts.gh-audit = "gh_audit:main"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "ruff>=0.4",
    "types-pyyaml>=6.0.1",
]

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
