[project]
name = "gh-audit"
version = "0.1.3"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.1,<9",
    "pygithub>=2.6,<3",
    "pyyaml>=6.0.1,<7",
]
entry-points.console_scripts.gh-audit = "gh_audit:main"

[dependency-groups]
dev = [
    "mypy>=1,<2",
    "ruff>=0.3,<2",
    "types-pyyaml>=6.0.1,<7",
]

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
